(feat) refacto and update